    - removed usage of deprecated Automake variable INCLUDES
    - added new command line tool "gigmerge"
    - added "const" keyword to several methods
    - added new command line tool "gig2mono"
    - added man page for "sf2dump"
    - added new command line tool "korgdump" (and a man page for it)
    - added new command line tool "korg2gig" (and a man page for it)

  * SoundFont file format:
    - initial implementation
    - changed region lookup API to avoid malloc in RT threads
    - fixed GetEG1Sustain which didn't return correct value
    - bugfix: GetPan always returned -1, 0 or 1

  * KORG file format:
    - initial support for sample based instruments in KORG's file format
      (.KMP and .KSF files)

  * src/gig.cpp:
    - bugfix: VCF velocity dynamic range and VCF velocity curve
      weren't saved correctly
    - implemented File::AddDuplicateInstrument()
    - bugfix: negative EG3 depth values were not correctly parsed or
      saved
    - added write support for CtrlTrigger midi rule
    - added read and write support for Legato and Alternator midi
      rules
    - bugfix: sample groups were sometimes created multiple times or with
      wrong textual group name
    - added new method File::AddContentOf() for merging .gig files
    - GIG FORMAT EXTENSION: added additional MIDI controllers for leverage
      controller types (only works with LinuxSampler & gigedit, will not
      work with Gigasampler/GigaStudio)
    - added new method File::GetGroup(String name) for getting group by name
    - added new method Region::GetDimensionDefinition(dimension_t type)
    - bugfix: don't alter region pointer in DimensionRegion::CopyAssign()
    - added some more sanity checks in Region::AddDimension()
    - added new method Region::DeleteDimensionZone(dimension_t, int)
    - added new method Region::SplitDimensionZone(dimension_t, int)
    - Fixed crash caused by Region::GetDimensionRegionByValue() that happened